// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parse function > extracts steps correctly 1`] = `
[
  Section {
    "content": [
      {
        "items": [
          {
            "type": "text",
            "value": "Crack the ",
          },
          {
            "alternatives": [
              {
                "displayName": "eggs",
                "index": 0,
                "quantity": {
                  "equivalents": [
                    {
                      "value": {
                        "type": "fixed",
                        "value": {
                          "type": "decimal",
                          "value": 3,
                        },
                      },
                    },
                  ],
                  "scalable": true,
                },
              },
            ],
            "id": "ingredient-item-0",
            "type": "ingredient",
          },
          {
            "type": "text",
            "value": " into a ",
          },
          {
            "index": 0,
            "quantity": {
              "type": "fixed",
              "value": {
                "type": "decimal",
                "value": 1,
              },
            },
            "type": "cookware",
          },
          {
            "type": "text",
            "value": ". Mix with some ",
          },
          {
            "alternatives": [
              {
                "displayName": "flour",
                "index": 1,
              },
            ],
            "id": "ingredient-item-1",
            "type": "ingredient",
          },
          {
            "type": "text",
            "value": " and add ",
          },
          {
            "alternatives": [
              {
                "displayName": "coarse salt",
                "index": 2,
              },
            ],
            "id": "ingredient-item-2",
            "type": "ingredient",
          },
          {
            "type": "text",
            "value": ".",
          },
        ],
        "type": "step",
      },
      {
        "items": [
          {
            "type": "text",
            "value": "Melt the ",
          },
          {
            "alternatives": [
              {
                "displayName": "butter",
                "index": 3,
                "quantity": {
                  "equivalents": [
                    {
                      "unit": {
                        "name": "g",
                      },
                      "value": {
                        "type": "fixed",
                        "value": {
                          "type": "decimal",
                          "value": 50,
                        },
                      },
                    },
                  ],
                  "scalable": true,
                },
              },
            ],
            "id": "ingredient-item-3",
            "type": "ingredient",
          },
          {
            "type": "text",
            "value": " in a ",
          },
          {
            "index": 1,
            "type": "cookware",
          },
          {
            "type": "text",
            "value": " on medium heat.",
          },
        ],
        "type": "step",
      },
      {
        "items": [
          {
            "type": "text",
            "value": "Cook for ",
          },
          {
            "index": 0,
            "type": "timer",
          },
          {
            "type": "text",
            "value": ".",
          },
        ],
        "type": "step",
      },
      {
        "items": [
          {
            "type": "text",
            "value": "Serve hot.",
          },
        ],
        "type": "step",
      },
    ],
    "name": "",
  },
]
`;

exports[`parse function > parses complex recipes correctly 1`] = `
Recipe {
  "_itemCount": 20,
  "choices": {
    "ingredientGroups": Map {},
    "ingredientItems": Map {},
  },
  "cookware": [
    {
      "name": "Dutch oven",
    },
    {
      "name": "small bowl",
    },
    {
      "name": "13×9-inch baking dish",
    },
    {
      "name": "rubber spatula",
    },
    {
      "flags": [
        "optional",
      ],
      "name": "icing spatula",
    },
  ],
  "ingredients": [
    {
      "name": "lasagne noodles",
      "quantity": {
        "value": {
          "type": "fixed",
          "value": {
            "type": "decimal",
            "value": 9,
          },
        },
      },
    },
    {
      "name": "bulk Italian sausage",
      "quantity": {
        "unit": "lb",
        "value": {
          "type": "fixed",
          "value": {
            "type": "decimal",
            "value": 1.2,
          },
        },
      },
    },
    {
      "name": "ground beef",
      "quantity": {
        "unit": "lb",
        "value": {
          "type": "fixed",
          "value": {
            "den": 4,
            "num": 3,
            "type": "fraction",
          },
        },
      },
    },
    {
      "name": "onion",
      "preparation": "medium, diced",
      "quantity": {
        "value": {
          "type": "fixed",
          "value": {
            "type": "decimal",
            "value": 1,
          },
        },
      },
    },
    {
      "name": "garlic",
      "quantity": {
        "unit": "cloves",
        "value": {
          "type": "fixed",
          "value": {
            "type": "decimal",
            "value": 3,
          },
        },
      },
    },
    {
      "name": "crushed tomatoes",
      "quantity": {
        "unit": "cans",
        "value": {
          "type": "fixed",
          "value": {
            "type": "decimal",
            "value": 2,
          },
        },
      },
    },
    {
      "name": "tomato paste",
      "quantity": {
        "unit": "cans",
        "value": {
          "type": "fixed",
          "value": {
            "type": "decimal",
            "value": 2,
          },
        },
      },
    },
    {
      "name": "water",
      "quantity": {
        "unit": "cup",
        "value": {
          "type": "fixed",
          "value": {
            "den": 3,
            "num": 2,
            "type": "fraction",
          },
        },
      },
    },
    {
      "name": "sugar",
      "quantity": {
        "unit": "tbsp",
        "value": {
          "type": "fixed",
          "value": {
            "type": "decimal",
            "value": 2,
          },
        },
      },
    },
    {
      "name": "fresh parsley",
      "preparation": "minced, divided",
      "quantity": {
        "unit": "l",
        "value": {
          "type": "fixed",
          "value": {
            "type": "decimal",
            "value": 0.104,
          },
        },
      },
    },
    {
      "name": "dried basil",
      "quantity": {
        "unit": "tsp",
        "value": {
          "type": "fixed",
          "value": {
            "type": "decimal",
            "value": 2,
          },
        },
      },
    },
    {
      "name": "fennel seed",
      "quantity": {
        "unit": "tsp",
        "value": {
          "type": "fixed",
          "value": {
            "den": 4,
            "num": 3,
            "type": "fraction",
          },
        },
      },
    },
    {
      "name": "salt",
      "quantity": {
        "unit": "tsp",
        "value": {
          "type": "fixed",
          "value": {
            "den": 4,
            "num": 3,
            "type": "fraction",
          },
        },
      },
    },
    {
      "name": "pepper",
      "preparation": "coarsely ground",
      "quantity": {
        "unit": "tsp",
        "value": {
          "type": "fixed",
          "value": {
            "den": 4,
            "num": 1,
            "type": "fraction",
          },
        },
      },
    },
    {
      "name": "egg",
      "preparation": "large, lightly beaten",
      "quantity": {
        "value": {
          "type": "fixed",
          "value": {
            "type": "decimal",
            "value": 1,
          },
        },
      },
    },
    {
      "name": "ricotta cheese",
      "quantity": {
        "unit": "carton",
        "value": {
          "type": "fixed",
          "value": {
            "type": "decimal",
            "value": 1,
          },
        },
      },
    },
    {
      "name": "mozzarella",
      "preparation": "shredded",
      "quantity": {
        "unit": "cups",
        "value": {
          "type": "fixed",
          "value": {
            "type": "decimal",
            "value": 4,
          },
        },
      },
    },
    {
      "name": "Parmesan",
      "preparation": "grated",
      "quantity": {
        "unit": "cup",
        "value": {
          "type": "fixed",
          "value": {
            "den": 4,
            "num": 3,
            "type": "fraction",
          },
        },
      },
    },
  ],
  "metadata": {
    "author": "Pam Thompson",
    "cook time": "50m",
    "prep time": "1h",
    "servings": "12, 12 slices",
    "source": "https://www.tasteofhome.com/recipes/best-lasagna/",
    "tags": [
      "pasta",
      "casserole",
      "classic",
    ],
    "time": "1h50m",
    "title": "Best Lasagna",
  },
  "sections": [
    Section {
      "content": [
        {
          "items": [
            {
              "type": "text",
              "value": "Bring a large pot of salted water to a boil. Cook the ",
            },
            {
              "alternatives": [
                {
                  "displayName": "lasagne noodles",
                  "index": 0,
                  "quantity": {
                    "equivalents": [
                      {
                        "value": {
                          "type": "fixed",
                          "value": {
                            "type": "decimal",
                            "value": 9,
                          },
                        },
                      },
                    ],
                    "scalable": true,
                  },
                },
              ],
              "id": "ingredient-item-0",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": " according to the package directions. When complete, drain the noodles, and set aside.",
            },
          ],
          "type": "step",
        },
        {
          "items": [
            {
              "type": "text",
              "value": "Meanwhile, heat a ",
            },
            {
              "index": 0,
              "type": "cookware",
            },
            {
              "type": "text",
              "value": " over medium heat. Add the ",
            },
            {
              "alternatives": [
                {
                  "displayName": "bulk Italian sausage",
                  "index": 1,
                  "quantity": {
                    "equivalents": [
                      {
                        "unit": {
                          "name": "lb",
                        },
                        "value": {
                          "type": "fixed",
                          "value": {
                            "type": "decimal",
                            "value": 1.2,
                          },
                        },
                      },
                    ],
                    "scalable": true,
                  },
                },
              ],
              "id": "ingredient-item-1",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ", ",
            },
            {
              "alternatives": [
                {
                  "displayName": "ground beef",
                  "index": 2,
                  "quantity": {
                    "equivalents": [
                      {
                        "unit": {
                          "name": "lb",
                        },
                        "value": {
                          "type": "fixed",
                          "value": {
                            "den": 4,
                            "num": 3,
                            "type": "fraction",
                          },
                        },
                      },
                    ],
                    "scalable": true,
                  },
                },
              ],
              "id": "ingredient-item-2",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": " and diced ",
            },
            {
              "alternatives": [
                {
                  "displayName": "onion",
                  "index": 3,
                  "quantity": {
                    "equivalents": [
                      {
                        "value": {
                          "type": "fixed",
                          "value": {
                            "type": "decimal",
                            "value": 1,
                          },
                        },
                      },
                    ],
                    "scalable": true,
                  },
                },
              ],
              "id": "ingredient-item-3",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ". Cook for ",
            },
            {
              "index": 0,
              "type": "timer",
            },
            {
              "type": "text",
              "value": " or until the meat is no longer pink, breaking up the meat with a large spoon as it cooks to create gorgeous crumbles. Add the ",
            },
            {
              "alternatives": [
                {
                  "displayName": "garlic",
                  "index": 4,
                  "quantity": {
                    "equivalents": [
                      {
                        "unit": {
                          "name": "cloves",
                        },
                        "value": {
                          "type": "fixed",
                          "value": {
                            "type": "decimal",
                            "value": 3,
                          },
                        },
                      },
                    ],
                    "scalable": true,
                  },
                },
              ],
              "id": "ingredient-item-4",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ", and cook for ",
            },
            {
              "index": 1,
              "type": "timer",
            },
            {
              "type": "text",
              "value": ", until the mixture is fragrant.",
            },
          ],
          "type": "step",
        },
        {
          "note": "Editor’s Tip: To ensure the noodles will not stick to each other, stir the water like a whirlpool when you add the pasta sheets.",
          "type": "note",
        },
      ],
      "name": "Brown the beef",
    },
    Section {
      "content": [
        {
          "items": [
            {
              "type": "text",
              "value": "Drain the mixture in the Dutch oven. Then, add the remaining sauce ingredients: ",
            },
            {
              "alternatives": [
                {
                  "displayName": "crushed tomatoes",
                  "index": 5,
                  "quantity": {
                    "equivalents": [
                      {
                        "unit": {
                          "name": "cans",
                        },
                        "value": {
                          "type": "fixed",
                          "value": {
                            "type": "decimal",
                            "value": 2,
                          },
                        },
                      },
                    ],
                    "scalable": true,
                  },
                },
              ],
              "id": "ingredient-item-5",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ", ",
            },
            {
              "alternatives": [
                {
                  "displayName": "tomato paste",
                  "index": 6,
                  "quantity": {
                    "equivalents": [
                      {
                        "unit": {
                          "name": "cans",
                        },
                        "value": {
                          "type": "fixed",
                          "value": {
                            "type": "decimal",
                            "value": 2,
                          },
                        },
                      },
                    ],
                    "scalable": true,
                  },
                },
              ],
              "id": "ingredient-item-6",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ", ",
            },
            {
              "alternatives": [
                {
                  "displayName": "water",
                  "index": 7,
                  "quantity": {
                    "equivalents": [
                      {
                        "unit": {
                          "name": "cup",
                        },
                        "value": {
                          "type": "fixed",
                          "value": {
                            "den": 3,
                            "num": 2,
                            "type": "fraction",
                          },
                        },
                      },
                    ],
                    "scalable": true,
                  },
                },
              ],
              "id": "ingredient-item-7",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ", ",
            },
            {
              "alternatives": [
                {
                  "displayName": "sugar",
                  "index": 8,
                  "quantity": {
                    "equivalents": [
                      {
                        "unit": {
                          "name": "tbsp",
                        },
                        "value": {
                          "type": "fixed",
                          "value": {
                            "type": "decimal",
                            "value": 2,
                          },
                        },
                      },
                    ],
                    "scalable": true,
                  },
                },
              ],
              "id": "ingredient-item-8",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ", ",
            },
            {
              "alternatives": [
                {
                  "displayName": "fresh parsley",
                  "index": 9,
                  "quantity": {
                    "equivalents": [
                      {
                        "unit": {
                          "name": "tbsp",
                        },
                        "value": {
                          "type": "fixed",
                          "value": {
                            "type": "decimal",
                            "value": 3,
                          },
                        },
                      },
                    ],
                    "scalable": true,
                  },
                },
              ],
              "id": "ingredient-item-9",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ", ",
            },
            {
              "alternatives": [
                {
                  "displayName": "dried basil",
                  "index": 10,
                  "quantity": {
                    "equivalents": [
                      {
                        "unit": {
                          "name": "tsp",
                        },
                        "value": {
                          "type": "fixed",
                          "value": {
                            "type": "decimal",
                            "value": 2,
                          },
                        },
                      },
                    ],
                    "scalable": true,
                  },
                },
              ],
              "id": "ingredient-item-10",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ", ",
            },
            {
              "alternatives": [
                {
                  "displayName": "fennel seed",
                  "index": 11,
                  "quantity": {
                    "equivalents": [
                      {
                        "unit": {
                          "name": "tsp",
                        },
                        "value": {
                          "type": "fixed",
                          "value": {
                            "den": 4,
                            "num": 3,
                            "type": "fraction",
                          },
                        },
                      },
                    ],
                    "scalable": true,
                  },
                },
              ],
              "id": "ingredient-item-11",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ", ",
            },
            {
              "alternatives": [
                {
                  "displayName": "salt",
                  "index": 12,
                  "quantity": {
                    "equivalents": [
                      {
                        "unit": {
                          "name": "tsp",
                        },
                        "value": {
                          "type": "fixed",
                          "value": {
                            "den": 2,
                            "num": 1,
                            "type": "fraction",
                          },
                        },
                      },
                    ],
                    "scalable": true,
                  },
                },
              ],
              "id": "ingredient-item-12",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": " and ",
            },
            {
              "alternatives": [
                {
                  "displayName": "pepper",
                  "index": 13,
                  "quantity": {
                    "equivalents": [
                      {
                        "unit": {
                          "name": "tsp",
                        },
                        "value": {
                          "type": "fixed",
                          "value": {
                            "den": 4,
                            "num": 1,
                            "type": "fraction",
                          },
                        },
                      },
                    ],
                    "scalable": true,
                  },
                },
              ],
              "id": "ingredient-item-13",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ". ",
            },
          ],
          "type": "step",
        },
        {
          "items": [
            {
              "type": "text",
              "value": "Bring the mixture to a boil. Reduce the heat to a simmer. Cook, uncovered, for ",
            },
            {
              "index": 2,
              "type": "timer",
            },
            {
              "type": "text",
              "value": ", stirring occasionally.",
            },
          ],
          "type": "step",
        },
      ],
      "name": "Make the meat sauce",
    },
    Section {
      "content": [
        {
          "items": [
            {
              "type": "text",
              "value": "In a ",
            },
            {
              "index": 1,
              "type": "cookware",
            },
            {
              "type": "text",
              "value": ", whisk together the ",
            },
            {
              "alternatives": [
                {
                  "displayName": "egg",
                  "index": 14,
                  "quantity": {
                    "equivalents": [
                      {
                        "value": {
                          "type": "fixed",
                          "value": {
                            "type": "decimal",
                            "value": 1,
                          },
                        },
                      },
                    ],
                    "scalable": true,
                  },
                },
              ],
              "id": "ingredient-item-14",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ", ",
            },
            {
              "alternatives": [
                {
                  "displayName": "ricotta cheese",
                  "index": 15,
                  "quantity": {
                    "equivalents": [
                      {
                        "unit": {
                          "name": "carton",
                        },
                        "value": {
                          "type": "fixed",
                          "value": {
                            "type": "decimal",
                            "value": 1,
                          },
                        },
                      },
                    ],
                    "scalable": true,
                  },
                },
              ],
              "id": "ingredient-item-15",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ", and remaining ",
            },
            {
              "alternatives": [
                {
                  "displayName": "fresh parsley",
                  "index": 9,
                  "quantity": {
                    "equivalents": [
                      {
                        "unit": {
                          "name": "cup",
                        },
                        "value": {
                          "type": "fixed",
                          "value": {
                            "den": 4,
                            "num": 1,
                            "type": "fraction",
                          },
                        },
                      },
                    ],
                    "scalable": true,
                  },
                },
              ],
              "id": "ingredient-item-16",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": " and ",
            },
            {
              "alternatives": [
                {
                  "displayName": "salt",
                  "index": 12,
                  "quantity": {
                    "equivalents": [
                      {
                        "unit": {
                          "name": "tsp",
                        },
                        "value": {
                          "type": "fixed",
                          "value": {
                            "den": 4,
                            "num": 1,
                            "type": "fraction",
                          },
                        },
                      },
                    ],
                    "scalable": true,
                  },
                },
              ],
              "id": "ingredient-item-17",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": ". ",
            },
          ],
          "type": "step",
        },
        {
          "items": [
            {
              "type": "text",
              "value": "If you haven’t already, grate the ",
            },
            {
              "alternatives": [
                {
                  "displayName": "mozzarella",
                  "index": 16,
                  "quantity": {
                    "equivalents": [
                      {
                        "unit": {
                          "name": "cups",
                        },
                        "value": {
                          "type": "fixed",
                          "value": {
                            "type": "decimal",
                            "value": 4,
                          },
                        },
                      },
                    ],
                    "scalable": true,
                  },
                },
              ],
              "id": "ingredient-item-18",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": " and ",
            },
            {
              "alternatives": [
                {
                  "displayName": "Parmesan",
                  "index": 17,
                  "quantity": {
                    "equivalents": [
                      {
                        "unit": {
                          "name": "cup",
                        },
                        "value": {
                          "type": "fixed",
                          "value": {
                            "den": 4,
                            "num": 3,
                            "type": "fraction",
                          },
                        },
                      },
                    ],
                    "scalable": true,
                  },
                },
              ],
              "id": "ingredient-item-19",
              "type": "ingredient",
            },
            {
              "type": "text",
              "value": " cheeses.",
            },
          ],
          "type": "step",
        },
        {
          "note": "Editor’s Tip: For the freshest, creamiest taste, grate your own cheese at home.",
          "type": "note",
        },
      ],
      "name": "Prepare the cheese filling",
    },
    Section {
      "content": [
        {
          "items": [
            {
              "type": "text",
              "value": "Preheat the oven to 375°. ",
            },
          ],
          "type": "step",
        },
        {
          "items": [
            {
              "type": "text",
              "value": "Spoon 2 cups meat sauce into an ungreased ",
            },
            {
              "index": 2,
              "type": "cookware",
            },
            {
              "type": "text",
              "value": ", spreading it out to cover the entire dish. Layer three noodles onto the sauce. Add one-third of the ricotta mixture, spreading it over the noodles with a ",
            },
            {
              "index": 3,
              "type": "cookware",
            },
            {
              "type": "text",
              "value": " or an ",
            },
            {
              "index": 4,
              "type": "cookware",
            },
            {
              "type": "text",
              "value": ". Sprinkle with 1 cup mozzarella cheese and 2 tablespoons Parmesan cheese.",
            },
          ],
          "type": "step",
        },
        {
          "items": [
            {
              "type": "text",
              "value": "Repeat the layers twice, finishing with remaining meat sauce and cheeses. The dish will be very full by the time you get to the top!",
            },
          ],
          "type": "step",
        },
      ],
      "name": "Layer the lasagna ingredients",
    },
    Section {
      "content": [
        {
          "items": [
            {
              "type": "text",
              "value": "Cover the baking dish, and bake for ",
            },
            {
              "index": 3,
              "type": "timer",
            },
            {
              "type": "text",
              "value": ". ",
            },
          ],
          "type": "step",
        },
        {
          "items": [
            {
              "type": "text",
              "value": "Remove the cover, and cook for an additional ",
            },
            {
              "index": 4,
              "type": "timer",
            },
            {
              "type": "text",
              "value": ", until the sauce is bubbling around the edges and the cheese is fully melted. ",
            },
          ],
          "type": "step",
        },
        {
          "items": [
            {
              "type": "text",
              "value": "Let the lasagna stand for ",
            },
            {
              "index": 5,
              "type": "timer",
            },
            {
              "type": "text",
              "value": " before slicing and serving.",
            },
          ],
          "type": "step",
        },
      ],
      "name": "Bake the lasagna",
    },
  ],
  "servings": 12,
  "timers": [
    {
      "duration": {
        "type": "fixed",
        "value": {
          "type": "decimal",
          "value": 10,
        },
      },
      "name": undefined,
      "unit": "minutes",
    },
    {
      "duration": {
        "type": "fixed",
        "value": {
          "type": "decimal",
          "value": 1,
        },
      },
      "name": undefined,
      "unit": "min",
    },
    {
      "duration": {
        "type": "fixed",
        "value": {
          "type": "decimal",
          "value": 30,
        },
      },
      "name": undefined,
      "unit": "min",
    },
    {
      "duration": {
        "type": "fixed",
        "value": {
          "type": "decimal",
          "value": 25,
        },
      },
      "name": undefined,
      "unit": "min",
    },
    {
      "duration": {
        "type": "fixed",
        "value": {
          "type": "decimal",
          "value": 25,
        },
      },
      "name": undefined,
      "unit": "min",
    },
    {
      "duration": {
        "type": "fixed",
        "value": {
          "type": "decimal",
          "value": 15,
        },
      },
      "name": undefined,
      "unit": "min",
    },
  ],
}
`;

exports[`parse function > parses notes correctly 1`] = `
[
  Section {
    "content": [
      {
        "note": "This is a note at the beginning.",
        "type": "note",
      },
      {
        "items": [
          {
            "type": "text",
            "value": "Add ",
          },
          {
            "alternatives": [
              {
                "displayName": "flour",
                "index": 0,
                "quantity": {
                  "equivalents": [
                    {
                      "unit": {
                        "name": "g",
                      },
                      "value": {
                        "type": "fixed",
                        "value": {
                          "type": "decimal",
                          "value": 100,
                        },
                      },
                    },
                  ],
                  "scalable": true,
                },
              },
            ],
            "id": "ingredient-item-0",
            "type": "ingredient",
          },
          {
            "type": "text",
            "value": "> and this.",
          },
        ],
        "type": "step",
      },
      {
        "note": "This is a note in the middle which continues on the next line.",
        "type": "note",
      },
      {
        "items": [
          {
            "type": "text",
            "value": "Another step.",
          },
        ],
        "type": "step",
      },
      {
        "note": "Another note on multiple lines starting with > for readability",
        "type": "note",
      },
      {
        "note": "A final note.",
        "type": "note",
      },
    ],
    "name": "",
  },
]
`;
